# limit-order-book

./: Cargo.toml  README.md
crates/lob_bench/: Cargo.toml
crates/lob_bench/benches/: lob_throughput.rs
crates/lob_cli/: Cargo.toml
crates/lob_cli/src/: main.rs
crates/lob_core/: Cargo.toml
crates/lob_core/src/: book.rs  events.rs  level.rs  lib.rs  match_engine.rs  side.rs  slab.rs  types.rs
crates/lob_core/tests/: book_tests.rs  proptest_invariants.rs
