[package]
name = "lob_bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Criterion benchmarks for the LOB engine"

[dependencies]
lob_core = { path = "../lob_core" }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lob_throughput"
harness = false
