[package]
name = "lob_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for replaying and generating LOB event streams"

[dependencies]
lob_core = { path = "../lob_core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
